--- a/Frontend/src/app/place-procurement-request/place-procurement-request.component.html
+++ b/Frontend/src/app/place-procurement-request/place-procurement-request.component.html
@@ -15,7 +15,7 @@
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
-            View Pending Procurement Request
+            Place Procurement Request
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -61,16 +61,6 @@
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Vendor
                     </th>
                     <td mat-cell *matCellDef="let procurement"> {{procurement.vendor.name}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="Status">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Status
-                    </th>
-                    <td mat-cell *matCellDef="let procurement">
-                        <span [style.color]="getStatusColor(procurement.requisition_Status.name)">
-                            {{procurement.requisition_Status.name}} 
-                        </span>
-                    </td>
                 </ng-container>
 
                 <ng-container matColumnDef="View">
