Create Final fix, Styling CHanges, Error Handling, Pagination

--- a/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
+++ b/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
@@ -249,6 +249,10 @@
                                         <input type="file" id="file1" placeholder="" formControlName="OtherQuote1"
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
                                             (change)="onFile1Upload($event)" required>
+                                        <br>
+                                        <mat-hint id="Error1" style="color: red; visibility: hidden;">Duplicate files
+                                            not
+                                            allowed!</mat-hint>
 
                                     </mat-card-content>
                                 </td>
@@ -261,6 +265,10 @@
                                         <input type="file" id="file2" placeholder="" formControlName="OtherQuote2"
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
                                             (change)="onFile2Upload($event)" required>
+                                        <br>
+                                        <mat-hint id="Error2" style="color: red; visibility: hidden;">Duplicate files
+                                            not
+                                            allowed!</mat-hint>
 
                                     </mat-card-content>
                                 </td>
@@ -276,6 +284,10 @@
                                         <input type="file" id="file3" placeholder="" formControlName="OtherQuote3"
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
                                             (change)="onFile3Upload($event)" required>
+                                        <br>
+                                        <mat-hint id="Error3" style="color: red; visibility: hidden;">Duplicate files
+                                            not
+                                            allowed!</mat-hint>
 
                                     </mat-card-content>
                                 </td>
