Create, Edit finalised

--- a/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
+++ b/Frontend/src/app/create-procurement-request/create-procurement-request.component.html
@@ -88,7 +88,7 @@
 
                                     <input type="file" id="file1" placeholder="" formControlName="Quote1"
                                         style="border: solid #244688; border-radius: 5px; " accept=".pdf"
-                                        (change)="onFile1Upload($event)" required>
+                                        (change)="onFile1UploadApproved($event)" required>
 
                                 </mat-card-content>
                             </td>
