--- a/Frontend/src/app/view-flagged-procurement-request/view-flagged-procurement-request.component.html
+++ b/Frontend/src/app/view-flagged-procurement-request/view-flagged-procurement-request.component.html
@@ -87,6 +87,7 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
+            <mat-paginator style="background-color: #eee;"   [pageSizeOptions]="[5, 10, 25, 100]"  [pageSize]="5" aria-label="Select page of GitHub search results"></mat-paginator>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
