--- a/Frontend/src/app/view-pending-procurement-request/view-pending-procurement-request.component.html
+++ b/Frontend/src/app/view-pending-procurement-request/view-pending-procurement-request.component.html
@@ -61,17 +61,6 @@
                     <td mat-cell *matCellDef="let procurement"> {{procurement.vendor.name}} </td>
                 </ng-container>
 
-                <<<<<<< HEAD=======<ng-container matColumnDef="Status">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Status
-                    </th>
-                    <td mat-cell *matCellDef="let procurement">
-                        <span [style.color]="getStatusColor(procurement.requisition_Status.name)">
-                            {{procurement.requisition_Status.name}}
-                        </span>
-                    </td>
-                    </ng-container>
-
-                    >>>>>>> Jason
                     <ng-container matColumnDef="View">
                         <th mat-header-cell *matHeaderCellDef></th>
                         <td mat-cell *matCellDef="let procurement" style="width:100px;">
@@ -92,6 +81,7 @@
                     <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
+            <mat-paginator style="background-color: #eee;"   [pageSizeOptions]="[5, 10, 25, 100]"  [pageSize]="5" aria-label="Select page of GitHub search results"></mat-paginator>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
