--- a/Frontend/src/app/view-consumable-category/view-consumable-category.component.html
+++ b/Frontend/src/app/view-consumable-category/view-consumable-category.component.html
@@ -44,7 +44,7 @@
                 <span class="loader" id="loading"></span>
             </div>
 
-            <table mat-table [dataSource]="SearchedConsumableCategories" class="mat-elevation-z8" id="table">
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" id="table">
 
                 <ng-container matColumnDef="Name">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Name </th>
@@ -110,6 +110,9 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
+            <mat-paginator style="background-color: #eee;" [length]="100" [pageSize]="10"
+                [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+            </mat-paginator>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
