fix approved vendor notifications, and refined procurement as well

--- a/Frontend/src/app/onboard_request/request-view/request-view.component.html
+++ b/Frontend/src/app/onboard_request/request-view/request-view.component.html
@@ -26,7 +26,7 @@
         <span style="flex: 1 1 auto;"></span>
   
         <mat-form-field mat appearance="fill" style=" float:right; font-size: 12px; width: 300px; margin-top:0.5%; margin-right:1%;">
-          <mat-label>Search by Name</mat-label>
+          <mat-label>Search by Request</mat-label>
           <input matInput (keyup)="applyFilter($event)" placeholder="E.g Employee name" #input>
           <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
