--- a/Frontend/src/app/place-procurement-request/place-procurement-request.component.html
+++ b/Frontend/src/app/place-procurement-request/place-procurement-request.component.html
@@ -9,8 +9,8 @@
 
             <a mat-list-item class="uni-font" routerLink="/ViewProcurementRequest">View Procurement Requests</a>
             <a mat-list-item class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement Request</a>
-            <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Request</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement Request</a>
+            <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Details</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement Details</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
