--- a/Frontend/src/app/finalize-procurement-request/finalize-procurement-request.component.html
+++ b/Frontend/src/app/finalize-procurement-request/finalize-procurement-request.component.html
@@ -3,22 +3,21 @@
         <mat-nav-list>
 
             <div mat-list-item style="display: flex; align-items: center;">
-                <mat-icon matSuffix style="width:30px; height: 44px; margin-left: 5%;">inventory</mat-icon>
-                <h2 class="uni-font">Procurement Request</h2>
+                <mat-icon aria-hidden="false" aria-label="payments"
+                    style="width:30px; height: 44px; margin-left: 5%;">payments</mat-icon>
+                <h2 class="uni-font">Finance</h2>
             </div>
 
-            <a mat-list-item class="uni-font" routerLink="/ViewConsumable">View Consumables</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement
-                Request</a>
-            <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Request</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement
-                Request</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewProcurementDetails">View Procurement Details</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewBudgetCategory">Budget Categories</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewBudgetAllocation">Budget Allocations</a>
+            <a mat-list-item class="uni-font" routerLink="/FinalizeProcurementRequest">Finalize Procurement Requests</a>
+
+
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
-            View Pending Procurement Request
+            View Unfinalized Procurement Requests
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -43,35 +42,35 @@
                 <span class="loader" id="loading"></span>
             </div>
 
-            <table mat-table [dataSource]="SearchedPRequests" class="mat-elevation-z8" id="table">
+            <table mat-table [dataSource]="ProcurementRequests" class="mat-elevation-z8" id="table">
 
                 <ng-container matColumnDef="Name">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Name </th>
-                    <td mat-cell *matCellDef="let procurement"> {{procurement.name}} </td>
+                    <td mat-cell *matCellDef="let procurement"> {{procurement.procurement_Request.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Description">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Description</th>
-                    <td mat-cell *matCellDef="let procurement"> {{procurement.description}} </td>
+                    <td mat-cell *matCellDef="let procurement"> {{procurement.procurement_Request.description}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="User">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">User</th>
-                    <td mat-cell *matCellDef="let procurement"> {{procurement.user.username}} </td>
+                    <td mat-cell *matCellDef="let procurement"> {{procurement.procurement_Request.user}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Vendor">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Vendor
                     </th>
-                    <td mat-cell *matCellDef="let procurement"> {{procurement.vendor.name}} </td>
+                    <td mat-cell *matCellDef="let procurement"> {{procurement.procurement_Request.vendor.name}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="Status">
                     <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Status
                     </th>
                     <td mat-cell *matCellDef="let procurement">
-                        <span [style.color]="getStatusColor(procurement.requisition_Status.name)">
-                            {{procurement.requisition_Status.name}}
+                        <span [style.color]="getStatusColor(procurement.procurement_Payment_Status.name)">
+                            {{procurement.procurement_Payment_Status.name}}
                         </span>
                     </td>
                 </ng-container>
@@ -81,8 +80,8 @@
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
                         <button class="noselect" type="button" style="background-color: #94CC5B;"
-                            routerLink="/PlaceProcurementRequestCreateDetails/{{procurement.procurement_Request_ID}}">
-                            <span class='text'>Create</span>
+                            routerLink="/FinalizeProcurementRequestCreate/{{procurement.procurement_Details_ID}}">
+                            <span class='text'>View</span>
                             <span class="icon" style="border-left: 1px solid #94CC5B; ">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
                                     <path
