--- a/Frontend/src/app/view-procurement-request/view-procurement-request.component.html
+++ b/Frontend/src/app/view-procurement-request/view-procurement-request.component.html
@@ -8,9 +8,12 @@
             </div>
 
             <a mat-list-item class="uni-font" routerLink="/ViewConsumable">View Consumables</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement Request</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement
+                Request</a>
             <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Request</a>
-            <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement Request</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement
+                Request</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewProcurementDetails">View Procurement Details</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
