--- a/Frontend/src/app/view-procurement-request/view-procurement-request.component.html
+++ b/Frontend/src/app/view-procurement-request/view-procurement-request.component.html
@@ -14,6 +14,7 @@
             <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement
                 Details</a>
             <a mat-list-item class="uni-font" routerLink="/ViewProcurementDetails">View Procurement Details</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewUnapprovedRequests">View Unapproved Requests</a>
 
         </mat-nav-list>
     </mat-sidenav>
