--- a/Frontend/src/app/onboard_request/request-update/request-update.component.css
+++ b/Frontend/src/app/onboard_request/request-update/request-update.component.css
@@ -1,13 +1,13 @@
-::ng-deep mat-tab-header {
+ mat-tab-header {
     background-color: #244688;
   }
 
-::ng-deep .mdc-tab-indicator__content--underline {
+ .mdc-tab-indicator__content--underline {
         --mdc-tab-indicator-active-indicator-color: white; 
 }
 
 
-::ng-deep .mdc-tab__text-label {
+ .mdc-tab__text-label {
     color: white;
 }
 
@@ -27,7 +27,7 @@ td {
     width: 200px;
 }
 
-::ng-deep .mat-mdc-tab-body-content {
+ .mat-mdc-tab-body-content {
     height:335px!important;
 }
 
