--- a/Frontend/src/app/view-flagged-procurement-details/view-flagged-procurement-details.component.css
+++ b/Frontend/src/app/view-flagged-procurement-details/view-flagged-procurement-details.component.css
@@ -1,4 +1,4 @@
-::ng-deep .mat-expansion-panel:not([class*=mat-elevation-z]) {
+.mat-expansion-panel:not([class*=mat-elevation-z]) {
     box-shadow:none!important;
 
 }
@@ -9,7 +9,7 @@
     margin-left: 1%;
 } 
 
-::ng-deep .mat-expansion-panel-body {
+ .mat-expansion-panel-body {
     padding:0!important;
 }
 
@@ -62,12 +62,12 @@ label {
 }
 
 
-::ng-deep .mat-expansion-panel:not([class*=mat-elevation-z]) {
+ .mat-expansion-panel:not([class*=mat-elevation-z]) {
     box-shadow:none!important;
 
 }
 
-::ng-deep .mat-expansion-panel-body {
+ .mat-expansion-panel-body {
     padding:0!important;
     
 }
