--- a/Frontend/src/app/view-procurement-request-approval/view-procurement-request-approval.component.css
+++ b/Frontend/src/app/view-procurement-request-approval/view-procurement-request-approval.component.css
@@ -49,7 +49,7 @@ mat-error:first-child {
 
 
 
-::ng-deep .mat-expansion-panel:not([class*=mat-elevation-z]) {
+ .mat-expansion-panel:not([class*=mat-elevation-z]) {
     box-shadow:none!important;
 
 }
@@ -59,7 +59,7 @@ mat-error:first-child {
     width: 750px;
     margin-left: 1%;
 } */
-::ng-deep .mat-expansion-panel-body {
+ .mat-expansion-panel-body {
     padding:0!important;
     
 }
@@ -81,7 +81,7 @@ mat-error:first-child {
     width: 80%!important;
 }
 
-::ng-deep mat-tab-header {
+ mat-tab-header {
     background-color: #244688;
   }
 
