--- a/Frontend/src/app/upload-invoice/upload-invoice.component.html
+++ b/Frontend/src/app/upload-invoice/upload-invoice.component.html
@@ -1,5 +1,5 @@
 <mat-tab-group (selectedTabChange)="onTabChange($event)">
-    <mat-tab label="Upload Receipt">
+    <mat-tab label="Upload Invoice">
         <ng-template matTabContent>
             <div style="margin: 10px;">
                 <form [formGroup]="myForm" (submit)="onSubmit()">
