--- a/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
+++ b/Frontend/src/app/view-procurement-details/view-procurement-details.component.html
@@ -79,7 +79,8 @@
                     </th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
                         <button (click)="openDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
-                            class="noselect" type="button" style="background-color: #94CC5B;">
+                            class="noselect" type="button"
+                            style="margin-right: 5%; display: flex; align-items: center; font-weight:bold ; width: 180px; margin-top: 0.5%; background-color: #94CC5B;">
                             <span class='text'>Proof of Payment</span>
                         </button>
                     </td>
@@ -90,7 +91,8 @@
                     </th>
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
                         <button (click)="openInvDialog(procurement.buyer_Name, procurement.procurement_Request_ID)"
-                            class="noselect" type="button" style="background-color: #94CC5B;">
+                            class="noselect" type="button"
+                            style="margin-right: 5%; display: flex; align-items: center; font-weight:bold ; width: 180px; margin-top: 0.5%; background-color: #94CC5B;">
                             <span class='text'>Invoice</span>
                         </button>
                     </td>
